debug and new function

--- a/MeteoApp/index.html
+++ b/MeteoApp/index.html
@@ -29,12 +29,12 @@
         <div id="windowCard" class="window blur">
             <h6 class="text-center">Dettagli meteo</h6>
             <div class="row">
-                <div class="col-6 text-center window-left">
+                <div class="col-12 col-md-6 text-center window-left">
                     <img id="windowIcon" src="icon/01d.svg" alt="" class="mt-2 mb-2">
                     <h5 id="windowDay" class="text-center"></h5>
                     <p id="windowMinMax"></p>
                 </div>
-                <div class="col-6 window-right pt-3">
+                <div class="col-12 col-md-6 window-right pt-3">
                     <div id="windowWind"><img src="img/vento.png" alt=""></div>
                     <div id="windowUmidity"><img src="img/goccia.png" alt=""></div>
                     <div id="windowProb"><img src="img/nuvola.png" alt=""></div>
